feat: card page 40% completed

--- a/index.html
+++ b/index.html
@@ -81,10 +81,13 @@
                 </div>
                 <div class="right-third-nav col-3 d-flex justify-content-start">
                     <div class="userIcon"><i class="fas fa-user"></i></div>
-                    <div class="basket px-3">
-                        <span class="price">$0.00</span>
-                        <i class='bx bx-basket bx-tada basketIcon'><span class="count">0</span></i>
-                    </div>
+                    <a href="/assets/html/card.html">
+                        <div class="basket px-3">
+                            $ <span id="totalPrice">0.00</span>
+                            <i class='bx bx-basket bx-tada basketIcon'><span id="product-count"
+                                    class="count">0</span></i>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -351,75 +354,81 @@
                         </div>
                         <div class="col-8 rightSide d-flex ">
                             <div class="product  col-4">
-                                <div class="content content1">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="62" class="content">
                                     <img src="/assets/img/product-image-62-346x310.jpg" alt="">
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
                                     <p>All Natural Italian-Style Chicken Meatballs </p>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                            class="newPrice">7</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
                                 </div>
                             </div>
                             <div class="product col-4">
-                                <div class="content">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="60" class="content">
                                     <img src="/assets/img/product-image-60-346x310.jpg" alt="">
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
                                     <p>All Natural Italian-Style Chicken Meatballs </p>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p>$11.68 $10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
+                                            class="newPrice">10.58</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
                                 </div>
                             </div>
                             <div class="product col-4">
-                                <div class="content">
+                                <div data-id="46" class="content">
+                                    <img src="/assets/img/product-image-46-346x310.jpg" alt="">
                                     <i class="fas minimize fa-compress"></i>
                                     <i class='bx heart bx-heart'></i>
-                                    <img src="/assets/img/product-image-46-346x310.jpg" alt="">
                                     <p>All Natural Italian-Style Chicken Meatballs </p>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
-                                    <p>$11.68 $10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
+                                            class="newPrice">10.58</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
                                 </div>
                             </div>
                             <div class="product col-4">
-                                <div class="content">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="45" class="content">
                                     <img src="/assets/img/product-image-45-346x310.jpg" alt="">
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
                                     <p>All Natural Italian-Style Chicken Meatballs </p>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p>$11.68 $10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
+                                            class="newPrice">10.58</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
                                 </div>
                             </div>
                             <div class="product col-4">
-                                <div class="content">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="59" class="content">
                                     <img src="/assets/img/product-image-59-346x310.jpg" alt="">
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
                                     <p>All Natural Italian-Style Chicken Meatballs </p>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p>$11.68 $10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
+                                            class="newPrice">10.58</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
                                 </div>
                             </div>
                             <div class="product col-4">
-                                <div class="content">
+                                <div data-id="58" class="content">
+                                    <img src="/assets/img/product-image-58-346x310.jpg" alt="">
                                     <i class="fas minimize fa-compress"></i>
                                     <i class='bx heart bx-heart'></i>
-                                    <img src="/assets/img/product-image-58-346x310.jpg" alt="">
                                     <p>All Natural Italian-Style Chicken Meatballs </p>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/3star.JPG" alt=""></p>
-                                    <p>$11.68 $10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
+                                            class="newPrice">10.58</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
                                 </div>
                             </div>
                         </div>
