--- a/index.html
+++ b/index.html
@@ -361,9 +361,10 @@
                                     <p>All Natural Italian-Style Chicken Meatballs </p>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $ <span
                                             class="newPrice">7</span></p>
                                     <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-4">
@@ -377,6 +378,7 @@
                                     <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
                                             class="newPrice">10.58</span></p>
                                     <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-4">
@@ -390,6 +392,7 @@
                                     <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
                                             class="newPrice">10.58</span></p>
                                     <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-4">
@@ -403,6 +406,7 @@
                                     <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
                                             class="newPrice">10.58</span></p>
                                     <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-4">
@@ -416,6 +420,7 @@
                                     <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
                                             class="newPrice">10.58</span></p>
                                     <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-4">
@@ -429,6 +434,7 @@
                                     <p><span style="text-decoration: line-through;"> $11.68</span> $ <span
                                             class="newPrice">10.58</span></p>
                                     <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                         </div>
