--- a/assets/html/card.html
+++ b/assets/html/card.html
@@ -201,7 +201,7 @@
     </div>
     <div class="container">
         <div class="row d-flex justify-content-center mt-5 col-9 ">
-            <a href="index.html"> <button id="rtnBtn" class="btn btn-info  d-none">Return to Shop</button></a>
+            <a href="/index.html"> <button id="rtnBtn" class="btn btn-info d-none">Return to Shop</button></a>
         </div>
     </div>
 
