--- a/assets/html/card.html
+++ b/assets/html/card.html
@@ -176,33 +176,37 @@
         </div>
     </header>
 
+    <div class="container-fluid cardPage">
+        <div class="container mt-5 d-flex justify-content-around">
+            <div class="row col-8">
+                <table class="table table-light" id="table">
+                    <thead>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">Product</th>
+                            <th scope="col">Price</th>
+                            <th scope="col">Quantity</th>
+                            <th scope="col">Subtotal </th>
+                            <th scope="col"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    </tbody>
+                </table>
 
-    <div class="container mt-5 d-flex justify-content-around">
-        <div class="row col-8">
-            <table id="table" class="table table-light">
-                <thead>
-                    <tr>
-                        <th scope="col">Product</th>
-                        <th scope="col">Price</th>
-                        <th scope="col">Quantity</th>
-                        <th scope="col">Subtotal </th>
-                    </tr>
-                </thead>
-                <tbody>
-                </tbody>
-            </table>
-
-        </div>
-        <div class="row col-3">
-            <div class="d-flex justify-content-end"> Total: $
-                <span id="totalPrice"></span>
+            </div>
+            <div class="row col-3">
+                <div class="d-flex justify-content-end"> Total: $
+                    <span id="totalPrice"></span>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="row d-flex justify-content-center mt-5 col-9 ">
-            <a href="/index.html"> <button id="rtnBtn" class="btn btn-info d-none">Return to Shop</button></a>
+        <div class="container">
+            <div class="row d-flex justify-content-center mt-5 col-9 ">
+                <a href="/index.html"> <button id="rtnBtn" class="btn btn-info d-none">Return to Shop</button></a>
+            </div>
         </div>
+
     </div>
 
     <footer>
