--- a/assets/html/card.html
+++ b/assets/html/card.html
@@ -368,7 +368,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- <script src="/assets/script/script.js"></script> -->
+<script src="/assets/script/script.js"></script>
 <script src="/assets/script/card.js"></script>
 
 </html>
