--- a/assets/html/product.html
+++ b/assets/html/product.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="/assets/img/bacola-removebg-preview.png" type="image/icon type">
+
     <script src="https://kit.fontawesome.com/9891a9465b.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 
     <link rel="stylesheet" href="/assets/css/main.css">
-
-    <title>Front End Project</title>
+    <title>Home 3 – Bacola – Grocery Market and Food Theme</title>
 </head>
 
 <body>
@@ -81,10 +82,13 @@
                 </div>
                 <div class="right-third-nav col-3 d-flex justify-content-start">
                     <div class="userIcon"><i class="fas fa-user"></i></div>
-                    <div class="basket px-3">
-                        <span class="price">$0.00</span>
-                        <i class='bx bx-basket bx-tada basketIcon'><span class="count">0</span></i>
-                    </div>
+                    <a href="/assets/html/card.html">
+                        <div class="basket px-3">
+                            $ <span id="totalPrice">0.00</span>
+                            <i class='bx bx-basket bx-tada basketIcon'><span id="product-count"
+                                    class="count">0</span></i>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
@@ -172,7 +176,6 @@
             </div>
         </div>
     </header>
-
     <!-- Carousel -->
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
 
@@ -190,8 +193,8 @@
                         <div class="row leftPart col-4">
 
                             <!-- The slideshow/carousel -->
-                            <div class="carousel-inner w-100">
-                                <div class="carousel-item active">
+                            <div id="productInfo" class="carousel-inner w-100">
+                                <div data-id="62" class="carousel-item active">
                                     <img src="/assets/img/Product/product-image-62.jpg" alt="62" class="d-block">
                                 </div>
                                 <div class="carousel-item">
@@ -215,12 +218,17 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-4 middlePart">
-                            <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
+                        <div class="col-4 middlePart content">
+                            <p><span style="text-decoration: line-through;"> $9.35 </span>$ <span>7.25</span></p>
                             <strong>IN STOCK</strong>
                             <p>Vivamus adipiscing nisl ut dolor dignissim semper. Nulla luctus malesuada tincidunt.
                                 Class aptent taciti sociosqu ad litora torquent</p>
-                            <span>-</span> <span>1</span> <span>+</span> <button>Add To Cart</button>
+                            <button type="submit" style="cursor: pointer;">-</button> <span
+                                style="margin: 0 5px;">1</span> <button type="submit"
+                                style="cursor: pointer; margin-right: 20px;">+</button>
+                            <button id="productBtn">Add To Cart</button>
+                            <input style="width: 40px;" disabled value="99" min="0" max="99" type="number">
+                            <button type="submit">Reset</button>
                             <p><i class='bx bx-heart'></i>ADD TO WISHLIST </p>
                             <p>Type: Organic</p>
                             <p>MFG: Jun 4.2021</p>
@@ -368,51 +376,71 @@
                     <div class="products">
                         <div class="d-flex" style="flex-wrap: wrap;">
                             <div class="product  col-3">
-                                <div class="content">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="62" class="content">
                                     <img src="/assets/img/product-image-62-346x310.jpg" alt="">
-                                    <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
+                                    <p>All Natural Italian-Style Chicken Meatballs </p>
+                                    <span class="discount">23%</span>
+                                    <span class="offer">RECOMMENDED</span>
+                                    <span class="type d-none"></span>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                            class="newPrice">7.25</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-3">
-                                <div class="content">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="60" class="content">
                                     <img src="/assets/img/product-image-60-346x310.jpg" alt="">
-                                    <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
+                                    <p>All Natural Italian-Style Chicken Meatballs </p>
+                                    <span class="discount">23%</span>
+                                    <span class="offer">RECOMMENDED</span>
+                                    <span class="type d-none"></span>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                            class="newPrice">7.25</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-3">
-                                <div class="content">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="46" class="content">
                                     <img src="/assets/img/product-image-46-346x310.jpg" alt="">
-                                    <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
+                                    <p>All Natural Italian-Style Chicken Meatballs </p>
+                                    <span class="discount">23%</span>
+                                    <span class="offer">RECOMMENDED</span>
+                                    <span class="type d-none"></span>
                                     <strong>IN STOCK</strong>
-                                    <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                            class="newPrice">7.25</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-3">
-                                <div class="content">
+                                <div data-id="45" class="content">
+                                    <img src="/assets/img/product-image-45-346x310.jpg" alt="">
                                     <i class="fas minimize fa-compress"></i>
                                     <i class='bx heart bx-heart'></i>
-                                    <img src="/assets/img/product-image-45-346x310.jpg" alt="">
-                                    <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                    <p>All Natural Italian-Style Chicken Meatballs </p>
+                                    <span class="discount">23%</span>
+                                    <span class="offer">RECOMMENDED</span>
+                                    <span class="type d-none"></span>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
-                                    <button class="btn btn-primary">View Products</button>
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                            class="newPrice">7.25</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                         </div>
@@ -421,51 +449,71 @@
                     <div class="products">
                         <div class="d-flex" style="flex-wrap: wrap;">
                             <div class="product  col-3">
-                                <div class="content">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="62" class="content">
                                     <img src="/assets/img/product-image-62-346x310.jpg" alt="">
-                                    <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
+                                    <p>All Natural Italian-Style Chicken Meatballs </p>
+                                    <span class="discount">23%</span>
+                                    <span class="offer">RECOMMENDED</span>
+                                    <span class="type d-none"></span>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                            class="newPrice">7.25</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-3">
-                                <div class="content">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="60" class="content">
                                     <img src="/assets/img/product-image-60-346x310.jpg" alt="">
-                                    <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
+                                    <p>All Natural Italian-Style Chicken Meatballs </p>
+                                    <span class="discount">23%</span>
+                                    <span class="offer">RECOMMENDED</span>
+                                    <span class="type d-none"></span>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                            class="newPrice">7.25</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-3">
-                                <div class="content">
-                                    <i class="fas minimize fa-compress"></i>
-                                    <i class='bx heart bx-heart'></i>
+                                <div data-id="46" class="content">
                                     <img src="/assets/img/product-image-46-346x310.jpg" alt="">
-                                    <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                    <i class="fas minimize fa-compress"></i>
+                                    <i class='bx heart bx-heart'></i>
+                                    <p>All Natural Italian-Style Chicken Meatballs </p>
+                                    <span class="discount">23%</span>
+                                    <span class="offer">RECOMMENDED</span>
+                                    <span class="type d-none"></span>
                                     <strong>IN STOCK</strong>
-                                    <p><img src="/assets/img/starts/5star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
-                                    <button class="btn btn-primary">Add To Card</button>
+                                    <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                            class="newPrice">7.25</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                             <div class="product col-3">
-                                <div class="content">
+                                <div data-id="45" class="content">
+                                    <img src="/assets/img/product-image-45-346x310.jpg" alt="">
                                     <i class="fas minimize fa-compress"></i>
                                     <i class='bx heart bx-heart'></i>
-                                    <img src="/assets/img/product-image-45-346x310.jpg" alt="">
-                                    <p class="description">All Natural Italian-Style Chicken Meatballs </p>
+                                    <p>All Natural Italian-Style Chicken Meatballs </p>
+                                    <span class="discount">23%</span>
+                                    <span class="offer">RECOMMENDED</span>
+                                    <span class="type d-none"></span>
                                     <strong>IN STOCK</strong>
                                     <p><img src="/assets/img/starts/4star.JPG" alt=""></p>
-                                    <p><span style="text-decoration: line-through;"> $11.68 </span>$10.58</p>
-                                    <button class="btn btn-primary">View Products</button>
+                                    <p><span style="text-decoration: line-through;"> $9.35</span> $<span
+                                            class="newPrice">7.25</span></p>
+                                    <button class="btn btn-primary btn-add">Add To Card</button>
+                                    <p class="prodCount"><span>-</span> <span>0</span><span>+</span></p>
                                 </div>
                             </div>
                         </div>
@@ -627,7 +675,7 @@
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
-<script src="/assets/script/shop.js"></script>
+<script src="/assets/script/product.js"></script>
+<script src="/assets/script/script.js"></script>
 
 </html>
