--- a/index.html
+++ b/index.html
@@ -1082,7 +1082,7 @@
 <script src="/assets/script/countdown.js"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-
+<script src="/assets/script/plugin.js"></script>
 <script src="/assets/script/script.js"></script>
 
 </html>
