feat: productPage rating star added

--- a/assets/html/product.html
+++ b/assets/html/product.html
@@ -320,9 +320,9 @@
                                             <img src="/assets/img/Product/admin.jpeg" alt="">
                                         </div>
                                         <div class="adminComment">
-                                            <i class='bx bxs-star'></i><i class='bx bxs-star'></i><i
-                                                class='bx bxs-star'></i><i class='bx bxs-star'></i><i
-                                                class='bx bx-star'></i>
+                                            <i class='bx gold bxs-star'></i><i class='bx gold bxs-star'></i><i
+                                                class='bx gold bxs-star'></i><i class='bx gold bxs-star'></i><i
+                                                class='bx grey bxs-star'></i>
                                             <p><strong>admin </strong>– <span>May 1, 2021</span></p>
                                             <p>Sed perspiciatis unde omnis iste natus error sit voluptatem
                                                 accusantium doloremque laudantium.</p>
@@ -333,18 +333,18 @@
                                         <p>Your email address will not be published. Required fields are marked *
                                         </p>
                                         <p>Your rating *</p>
-                                        <p class="rating">
-                                            <span><i class='bx bx-star'></i></span><span class="line">|</span>
-                                            <span><i class='bx bx-star'></i><i class='bx bx-star'></i></span><span
-                                                class="line">|</span>
-                                            <span><i class='bx bx-star'></i><i class='bx bx-star'></i></i><i
-                                                    class='bx bx-star'></i></span><span class="line">|</span>
-                                            <span><i class='bx bx-star'></i><i class='bx bx-star'></i></i><i
-                                                    class='bx bx-star'></i><i class='bx bx-star'></i></span><span
-                                                class="line">|</span>
-                                            <span><i class='bx bx-star'></i><i class='bx bx-star'></i></i><i
-                                                    class='bx bx-star'></i><i class='bx bx-star'></i><i
-                                                    class='bx bx-star'></i></span>
+                                        <p id="rating">
+                                            <span><i class='bx grey bxs-star'></i></span><span class="line">|</span>
+                                            <span><i class='bx grey bxs-star'></i><i
+                                                    class='bx grey bxs-star'></i></span><span class="line">|</span>
+                                            <span><i class='bx grey bxs-star'></i><i class='bx grey bxs-star'></i></i><i
+                                                    class='bx grey bxs-star'></i></span><span class="line">|</span>
+                                            <span><i class='bx grey bxs-star'></i><i class='bx grey bxs-star'></i></i><i
+                                                    class='bx grey bxs-star'></i><i
+                                                    class='bx grey bxs-star'></i></span><span class="line">|</span>
+                                            <span><i class='bx grey bxs-star'></i><i class='bx grey bxs-star'></i></i><i
+                                                    class='bx grey bxs-star'></i><i class='bx grey bxs-star'></i><i
+                                                    class='bx grey bxs-star'></i></span>
                                         </p>
                                         <form action="">
                                             <label>Your review *</label>
