--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                             </div>
                         </div>
                         <div class="col-8 rightSide d-flex ">
-                            <div class="product  col-4">
+                            <div id="firstProd" class="product  col-4">
                                 <div data-id="62" class="content">
                                     <img src="/assets/img/product-image-62-346x310.jpg" alt="">
                                     <i class="fas minimize fa-compress"></i>
@@ -673,7 +673,7 @@
         <section class="extraPercent container-fluid">
             <div class="container">
                 <div class="row d-flex justify-content-center my-5">
-                    <h2>SAVE AN EXTRA <strong>5-10 %</strong> ON EVERY AUTOSHIP ORDER!</h2>
+                    <h2 style="text-align: center;">SAVE AN EXTRA <strong>5-10 %</strong> ON EVERY AUTOSHIP ORDER!</h2>
                 </div>
             </div>
         </section>
@@ -855,13 +855,12 @@
             </div>
         </section>
 
-
         <section class="lastSectionBody container-fluid">
             <div class="container lastSection">
                 <div class="row col-11 d-flex justify-content-around">
                     <div class="product col-4">
                         <img src="/assets/img/bacola-banner-05.jpg" alt="">
-                        <div class="content">
+                        <div class="cont">
                             <h6>WEEKEND DISCOUNT 40%</h6>
                             <h3>Natural Eggs</h3>
                             <p>Eat one every day</p>
@@ -870,7 +869,7 @@
                     </div>
                     <div class="product col-4">
                         <img src="/assets/img/bacola-banner-06.jpg" alt="">
-                        <div class="content">
+                        <div class="cont">
                             <h6>WEEKEND DISCOUNT 40%</h6>
                             <h3>Taste The Best</h3>
                             <p>Shine the morning</p>
@@ -879,7 +878,7 @@
                     </div>
                     <div class="product col-4">
                         <img src="/assets/img/bacola-banner-10.jpg" alt="">
-                        <div class="content">
+                        <div class="cont">
                             <h6>WEEKEND DISCOUNT 40%</h6>
                             <h3>Ditch the Junk</h3>
                             <p>Breakfast made better</p>
@@ -890,7 +889,7 @@
                     <div class="product col-4">
                         <img src="/assets/img/blog-3-370x260.jpg" alt="">
                         <div class="description">
-                            <span>TIPS & TRICKS</span>
+                            <p>TIPS & TRICKS</p>
                             <h5>But I must explain to you how all this mistaken idea</h5>
                             <span>3 May 2021 </span>
                             <span> 3 comments</span>
@@ -900,7 +899,7 @@
                     <div class="product col-4">
                         <img src="/assets/img/blog-5-370x260.jpg" alt="">
                         <div class="description">
-                            <span>GROCERY</span>
+                            <p>GROCERY</p>
                             <h5>The Problem With Typefaces on the Web</h5>
                             <span>3 May 2021 </span>
                             <span> 3 comments</span>
@@ -911,7 +910,7 @@
                     <div class="product col-4">
                         <img src="/assets/img/blog-1-370x260.jpg" alt="">
                         <div class="description">
-                            <span>GROCERY</span>
+                            <p>GROCERY</p>
                             <h5>English Breakfast Tea With Tasty Donut Desserts</h5>
                             <span>2 May 2021 </span>
                             <span> 3 comments</span>
